--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "express": "^4.13.3",
-    "body-parser": "1.14.1"
+    "body-parser": "1.14.1",
+    "mocha": "2.3.3",
+    "chai": "3.4.0"
   }
 }
