--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.3",
     "body-parser": "1.14.1",
     "mocha": "2.3.3",
+    "gulp-mocha": "2.1.3",
     "chai": "3.4.0"
   }
 }
