--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mocha": "2.3.3",
     "gulp-mocha": "2.1.3",
     "chai": "3.4.0",
-    "xmlhttprequest": "1.8.0",
+    "request": "2.65.0",
     "chai-as-promised": "5.1.0",
     "morgan": "1.6.1",
     "gulp-express": "0.3.5"
