--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "chai-as-promised": "5.1.0",
     "morgan": "1.6.1",
     "gulp-express": "0.3.5",
-    "mongoose": "4.2.3"
+    "mongoose": "4.2.3",
+
+
+    "ng-admin": "0.9.1"
   }
 }
